[fix]update project version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SCAM-Client",
-  "version": "0.1.x",
+  "version": "0.1.1",
   "description": "SCAM",
   "author": "Yeachiu <Qiujl037@outlook.com>",
   "license": "MIT",
